--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -20,8 +20,7 @@
   border-radius: 0.5em;
   position: relative;
   text-align: center;
-  margin: 0.3em;
-  margin-right:0.1em;
+  margin: 1vw;
   background: white;
   transition: transform 0.8s;
   box-shadow: 0px 0px 1.5em 0.2em rgba(0,0,0,0.31);
