--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,4 @@
-.h5p-bingo {
+.h5p-bingo .h5p-bingo-board {
   display: flex;
   flex-direction: row;
   font-size: 1em;
@@ -6,13 +6,13 @@
   padding: 0.5em;
 }
 
-.h5p-bingo-column {
+.h5p-bingo .h5p-bingo-column {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
 
-.h5p-bingo-button {
+.h5p-bingo .h5p-bingo-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,21 +25,24 @@
   transition: transform 0.8s;
   box-shadow: 0px 0px 1.5em 0.2em rgba(0,0,0,0.31);
 }
-.h5p-bingo-button:not(.h5p-button-blocked):hover {
+
+.h5p-bingo .h5p-bingo-button:not(.h5p-button-blocked):hover {
   cursor: pointer;
   background-color: #efefef;
 }
-.h5p-bingo-button:after {
+
+.h5p-bingo .h5p-bingo-button:after {
   content: "";
   display: block;
   padding-bottom: 100%;
 }
 
-.h5p-bingo-button-label {
+.h5p-bingo .h5p-bingo-button-label {
   opacity: 1;
   transition: opacity 0.1s ease 0.2s, display 0.1s ease 0.2s;
 }
-.h5p-bingo-button-symbol {
+
+.h5p-bingo .h5p-bingo-button-symbol {
   opacity: 1;
   width: 100%;
   height: 100%;
@@ -48,23 +51,23 @@
   transition: opacity 0.1s ease 0.2s, display 0.1s ease 0.2s;
 }
 
-.h5p-button-activated {
+.h5p-bingo .h5p-button-activated {
   -webkit-transform: rotateY(-180deg);
   -moz-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
   -ms-transform: scale(0,1.1);
 }
 
-.h5p-button-spinning {
+.h5p-bingo .h5p-button-spinning {
   -webkit-transform: rotateY(-720deg);
   -moz-transform: rotateY(-720deg);
   transform: rotateY(-720deg);
   -ms-transform: scale(0,1.1);
 }
 
-.h5p-button-blocked {
+.h5p-bingo .h5p-button-blocked {
 }
 
-.h5p-button-transparent {
+.h5p-bingo .h5p-button-transparent {
   opacity: 0;
 }
