--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   font-size: 1em;
   background: #f22626;
-  padding: 0.5em;
+  padding: 1%;
 }
 
 .h5p-bingo .h5p-bingo-column {
@@ -25,6 +25,9 @@
   transition: transform 0.8s;
   box-shadow: 0px 0px 1.5em 0.2em rgba(0,0,0,0.31);
   overflow: hidden;
+  width: calc(90% - 0.2em);
+  height: 100%;
+  margin: 5% 0;
 }
 
 .h5p-bingo .h5p-bingo-button:not(.h5p-button-blocked):hover {
