--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -51,7 +51,8 @@
   opacity: 1;
   width: 100%;
   height: 100%;
-  background: url('../images/starbadge.svg') center/80% no-repeat;
+  background: url('../images/starbadge.svg') center/100% no-repeat;
+  transform: rotateY(180deg);
   position: absolute;
   transition: opacity 0.1s ease 0.2s, display 0.1s ease 0.2s;
 }
