Add option for custom button background

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -47,7 +47,7 @@
   transition: opacity 0.1s ease 0.2s, display 0.1s ease 0.2s;
 }
 
-.h5p-bingo .h5p-bingo-button-symbol {
+.h5p-bingo .h5p-bingo-button-image {
   opacity: 1;
   width: 100%;
   height: 100%;
