--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   padding: 1%;
   line-height: 1.3em;
-  background: #f22626;
+  background: #46b5a1;
 }
 
 .h5p-bingo .h5p-bingo-column {
@@ -25,16 +25,34 @@
   text-align: center;
   background: white;
   transition: transform 0.8s;
-  box-shadow: 0px 0px 1.5em 0.2em rgba(0,0,0,0.31);
+  box-shadow: 10px 10px 22px 0px rgba(0,0,0,0.12);
   overflow: hidden;
   width: calc(90% - 0.2em);
   margin: 5% 0;
   white-space: nowrap;
 }
 
+.h5p-bingo .h5p-bingo-button.numbers {
+  font-size: 2.5em;
+  font-weight: bold;
+  border-radius:50%;
+  border: 0.5em solid white;
+  box-sizing: border-box;
+}
+
+.h5p-bingo .h5p-bingo-button.words {
+  box-sizing: border-box;
+  border: 1.2em solid white;
+  font-size: 1em;
+}
+
 .h5p-bingo .h5p-bingo-button:not(.h5p-button-blocked):hover {
   cursor: pointer;
   background-color: #efefef;
+}
+
+.h5p-bingo .h5p-bingo-button:not(.h5p-button-activated):hover {
+  border-color: #efefef;
 }
 
 .h5p-bingo .h5p-bingo-button:after {
@@ -53,16 +71,26 @@
   width: 100%;
   height: 100%;
   background: url('../images/starbadge.svg') center/100% no-repeat;
-  transform: rotateY(180deg);
   position: absolute;
   transition: opacity 0.1s ease 0.2s, display 0.1s ease 0.2s;
+  background-color: rgb(136, 29, 40);
 }
 
-.h5p-bingo .h5p-button-activated {
+.h5p-bingo .h5p-button-flipped {
   -webkit-transform: rotateY(-180deg);
   -moz-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
   -ms-transform: scale(0,1.1);
+}
+
+.h5p-bingo .h5p-button-activated.numbers {
+  border-color: rgb(255, 88, 105);
+  border-style: groove;
+}
+
+.h5p-bingo .h5p-button-activated.words {
+  border-color: rgb(255, 88, 105);
+  border-style: groove;
 }
 
 .h5p-bingo .h5p-button-spinning {
@@ -70,6 +98,12 @@
   -moz-transform: rotateY(-720deg);
   transform: rotateY(-720deg);
   -ms-transform: scale(0,1.1);
+}
+
+.h5p-bingo .h5p-button-bingo {
+  border-color: rgb(255, 88, 105);
+  background-color: rgb(136, 29, 40);
+  color: white;
 }
 
 .h5p-bingo .h5p-button-blocked {
