--- a/src/styles/h5p-bingo.css
+++ b/src/styles/h5p-bingo.css
@@ -30,6 +30,7 @@
   width: calc(90% - 0.2em);
   margin: 5% 0;
   white-space: nowrap;
+  user-select: none;
 }
 
 .h5p-bingo .h5p-bingo-button.numbers {
