Clean up a little

--- a/src/styles/h5p-bingo.scss
+++ b/src/styles/h5p-bingo.scss
@@ -123,7 +123,7 @@ $border-color_2: rgb(255, 88, 105);
 	}
 
   .h5p-bingo-button-image {
-		background: url('../images/starbadge.svg') center/100% no-repeat;
+		background: url('@assets/starbadge.svg') center/100% no-repeat;
 		height: 100%;
 		left: 0;
 		opacity: 1;
